@@ -59,7 +59,7 @@ sub Init {
 
     Debug("Email reporter initialized ($to)\n");
 
-    1;
+    return 1;
 }
 
 #--------------------------------------------------------------------------
