@@ -49,6 +49,7 @@ To announce to OMPI core testers:
                               operation on a specified file
     - &mpi_details() - pass arbitrary values from test run sections
                        to the mpi details section, indexed by string
+    - &get_processor_count() - return the number of CPUs on the localhost
 
 - Allow mpi_get_name, test_get_name, and test_build_name fields to
   accept the special value "all", meaning that they'll use all
